--- a/imgui/libs/Makefile
+++ b/imgui/libs/Makefile
@@ -1,14 +1,16 @@
 #
-# Makefile to build required libraries
-# In windows it requires mingw32-make.exe
+# Cross-platform Makefile to build required libraries
+# In Windows it requires mingw32-make.exe
 #
 GCC=-DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++
 DEBUG=-DCMAKE_BUILD_TYPE=Debug
 RELEASE=-DCMAKE_BUILD_TYPE=Release
 GEN=-G "Unix Makefiles"
 JOBS=-j4
+INSTALL_DIR=/usr/local/lib
 ifeq ($(OS),Windows_NT)
 	GEN=-G "MinGW Makefiles"
+	INSTALL_DIR=/giglibs
 endif
 
 #
@@ -20,7 +22,6 @@ all: build
 build:
 	cmake $(GEN) -Bbuild $(GCC) $(RELEASE)
 
-
 #
 # gcc debug
 #
@@ -30,6 +31,12 @@ debug: build_debug
 build_debug: 
 	cmake $(GEN) -Bbuild_debug $(GCC) $(DEBUG)
 
+#
+# install libraries
+#
+install: build
+	cmake -E make_directory $(INSTALL_DIR)
+	cmake -E copy libcimguigl.a libcimguivk.a libglfw3.a $(INSTALL_DIR)
 
 #
 # clean all targets
